# Design-patterns

./: .gitignore  CMakeLists.txt  Grafo.txt  README.md  main.cpp  mainSmart.cpp  mainVSPtr.cpp
P1/: CallBackTimer.h++  GBCollector.cpp  GBCollector.h  GBCollector.h++  HashTable.h  HashTable.h++  LinkedList.h++  Set.cpp  Set.h  Set.h++  VSPointer.h  VSPointer.h++  mainVSPtr.cpp
Pruebas de la progra 1/: GBCollector.cpp  GBCollector.h  Gen_id.cpp  Gen_id.h++  Hash.cpp  Hash.h  Hash.h++  HashTable.cpp  HashTable.h++  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  SmartPtr.cpp  SmartPtr.h++
csv pruebas/: Algoritmo_Dijkstra.cpp  Algoritmo_Dijkstra.h  CSVReader.cpp  CSVReader.h  Graph.cpp  Graph.h  lista.cpp  lista.h
patron de diseño observer/: Observer.h++  Subject.h++  libreria.h++
