cmake_minimum_required(VERSION 3.15)
project(Datos_2___2_0)

set(CMAKE_CXX_STANDARD 14)

#add_executable( Datos_2___2_0 mainAdapter.cpp
#        "patron de dise単o observer/Subject"
#        "patron de dise単o observer/Observer"
#        "patron de dise単o observer/producto"
#        "patron de dise単o observer/libreria"
#        "Adapter Pattern/EuropeanSocketInterface"
#        "Adapter Pattern/CRSocketInterface"
#        "Adapter Pattern/Socket"
#        "Adapter Pattern/Adapter"
#        "Adapter Pattern/Blender"
#        )

add_executable( Datos_2___2_0 mainSmart.cpp
        "Pruebas de la progra 1/SmartPtr.h++"
        "Pruebas de la progra 1/SmartPtr.cpp"

        "Pruebas de la progra 1/Hash.h"
        "Pruebas de la progra 1/Hash.cpp"

        "Pruebas de la progra 1/GBCollector.h"
        "Pruebas de la progra 1/GBCollector.cpp"

        "Pruebas de la progra 1/LinkedList.h"
        "Pruebas de la progra 1/LinkedList.cpp"

        )



